--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   },
   "dependencies": {
     "@bhplugin/vue3-datatable": "^1.1.3",
+    "@headlessui/vue": "^1.7.17",
     "@pinia/nuxt": "^0.5.1",
     "file-upload-with-preview": "^6.0.2",
+    "firebase": "^10.7.1",
     "maska": "^2.1.11",
     "pinia": "^2.1.7",
+    "sweetalert2": "^11.10.3",
     "tippy.vue": "^3.2.1",
     "vue-height-collapsible": "^0.1.1",
     "vue3-apexcharts": "^1.4.4",
